src/test/ui/feature-gates/rustc_insignificant_dtor.stderr
error[E0635]: unknown feature `rustc_insignificant_dtor`
  --> $DIR/rustc_insignificant_dtor.rs:1:12
   |
LL | #![feature(rustc_insignificant_dtor)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0635`.
