src/test/ui/feature-gates/rustc_insignificant_dtor.rs
#![feature(rustc_insignificant_dtor)] //~ ERROR unknown feature `rustc_insignificant_dtor`
fn main() {}
